Collapsing Categories Changelog
* 0.9.5 (2009.03.10)
    * Fixed some more settings panel issues

* 0.9.4 (2009.03.09)
    * Fixed issue with multiple instances

* 0.9.3 (2009.03.08)
    * Fixed links to sub-categories

* 0.9.2 (2009.03.07)
    * Tweaked default style
    * Fixed bug when not using permalinks

* 0.9.1 (2009.03.02)
    * Fixed bug where top level categories would not be displayed if they
      have no subcategories, and show only sub-categories is selected
    * Can leave sidebar ID option blank if desired

* 0.9 (2009.02.20)
    * Added option to exclude posts older than certain number of days
    * Widened widget options interface
    * Updated text of widget options some
		* Categories no longer get nested if for some reasons there are no posts
		  showing up for a category 
		* Added option to exclude post X in categories A and B when either A or B
		  is excluded
    * Post count is now more accurate
    * Better internationalization for post and category titles
    * Added truncate post title option
    * Settings panel only available for admin
    * fixed settings panel problems
    * greatly increased speed for blogs with lots of posts and categories
    * added new style selection method
    * If current page is in category X, then category X will be expanded
      (thanks to Bernhard Reiter)

* 0.8.5 (2009.01.23)
    * fixed settings panel problems

* 0.8.4 (2009.01.15)
    * fixed sql queries, which seems to be working for most people now
    * Got rid of empty quotes in query when no in/exclude is used
    * Added option to list categories, tags, or both

* 0.8.3 (2009.01.08)
    * Refixed settings page for manual usage
    * Changed category query in the hopes that it works for more people

* 0.8.2: (2009.01.07)
    * Added version to javascript
    * not loading unnecessary code for admin pages (fixes interference with
      akismet stats page
    * fixed settings page for manual usage

* 0.8.1 (2009/01/06)