@@ -1,6 +1,7 @@
 Collapsing Categories Changelog
 * 0.9.5 (2009.03.10)
     * Fixed some more settings panel issues
+    * Truncate post title now working for posts in sub-categories
 
 * 0.9.4 (2009.03.09)
     * Fixed issue with multiple instances
